--- a/pH_Nadel_zu_Laub.Rmd
+++ b/pH_Nadel_zu_Laub.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Veränderung des Boden-pH-Wertes und der Vegetation im Übergang von Nadel- zu Laubwald"
-author: "Nele Stackelberg   \n  Matrikelnummer: 3548205   \n -  \n Forschungsarbeit des Modul Freilandökologie Msc. Umweltwissenschaften  (1897 Wörter)  \n Dozierende: Gesine Pufal und Helmer Schack-Kirchner"
+author: "Nele Stackelberg   \n  Matrikelnummer: 3548205   \n -  \n Forschungsarbeit des Moduls Freilandökologie Msc. Umweltwissenschaften  (1897 Wörter)  \n Dozierende: Gesine Pufal und Helmer Schack-Kirchner"
 date: "Freiburg, 16. Juni 2018"
 output:
   pdf_document:
@@ -38,21 +38,21 @@ library(sp)
 ```
 
 # Einleitung
-Die Fichte ist in Europa die ökonomisch Wichtigste Nadelbaumart. Seit den 1950er Jahren wird sie sehr intensiv angebaut, weshalb heute in Zentraleuroopa große Fichten-Monokulturen das Waldbild vielerorts prägen. Der schnelle Wuchs und die gute Anpassungsfähigkeit der Baumart hat dafür gesorgt, das sie auch dort gepflanzt wurde, wo sie natürlicherweise nicht vorkommt. Der Fokus von Fichten im Waldbau lässt jedoch nach, da es durch Sturmwurf und Borkenkäfer zu großen Schäden in den Monokulturen kam und kommt [@CABI]. Kritik auf den Fokus der Fichte im Waldbau wird auch aufgrund der standortsverschlechternden Eigenschaften des Nadelbaumes ausgeübt [@LBW].
+Die Fichte ist in Europa aus ökonomischer Sicht die wichtigste Nadelbaumart. Seit den 1950er Jahren wird sie sehr intensiv angebaut, weshalb heute in Mitteleuropa große Fichten-Monokulturen das Waldbild vielerorts prägen. Der schnelle Wuchs und die gute Anpassungsfähigkeit der Baumart hat dafür gesorgt, dass sie auch dort gepflanzt wurde, wo sie natürlicherweise nicht vorkommt. Aktuell lässt der Fokus auf die Fichte im Waldbau nach, da durch den Klimawandel der Trockenstress und somit die Anfälligkeit durch Käferkalamitäten steigt [@CABI]. Kritik am intensiven Fichtenanbau wird auch aufgrund der standortsverschlechternden Eigenschaften des Nadelbaumes ausgeübt [@LBW].
 
 Um den Effekt der Fichte auf dem Boden zu analysieren kann der pH-Wert als Proxi-Größe erhoben werden. Der pH gilt als eine wichtige und aussagekräftige Bodenkenngröße [@Scheffer], es lassen sich Aussagen über Nähr- und Schadstoffe des Bodens, seine Eignung als Pflanzenstandort und über die Bodenorganismen ableiten.
-Aus dieser Grundlage steht dieser Arbeit folgende Hypothese zugrunde:
+Auf dieser Grundlage steht die Hypothese dieser Arbeit wie folgt:
 
 > Der Boden-pH-Wert im Fichtenbestand ist niedriger als im Laubmischwald, was auch an der dort vorkommenden Bodenvegetation erkennbar ist.
-> Dieser Einfluss ist auf einer Fläche, wo ein Fichtenbestand mit einer markanten Grenzlinie
-an Laubwald grenzt durch einen räumlichen Gradienten erkennbar.
+> Dieser Einfluss ist auf einer Fläche, auf der ein Fichtenbestand mit einer markanten Linie
+an Laubwald grenzt, durch einen räumlichen Gradienten erkennbar.
 
 # Methoden
-Der Zeitliche Rahmen ermöglicht an bis zu 60 Punkten pH-Messungen sowie die Aufnahme der Vegetation. Eine Fläche von 40 mal 50 Metern sollte dazu ausgewählt werden, durch die eine Scharfe Grenze eines Fichten zu Laubbaumbestandes verläuft. Dazu werden die Bestandeskarten im Raum Freiburg betrachtet. Damit der pH-Wert auf der Fläche nicht von unterschiedlichem Grundgestein geprägt ist wird zusätzlich die geologische Karte betrachtet.
-Die Auswahl fällt auf einen ca. 30 Jährigen Fichtenbestand am Schönberg auf ca. 520 m über NN, der an einen etwa gleichalten Buchen-Ahorn-Mischwald angrenzt (siehe Abb. \ref{karte1}). Bei dem Waldbestand handelt es laut Herr Bucher, dem Revierförster wahrscheinlich um eine Erstaufforstung. Vereinzelte Baumscheiben lassen auf die ehemalige Nutzung als Waldweide schließen, zudem lässt sich Terrassierung im Gelände erahnen weshalb auch eine ehemalige landwirtschaftliche Nutzung nicht auszuschließen ist. Die potentielle natürliche Vegetation der Fläche ist ein Waldmeister-Buchenwald, örtlich mit Orchideen-Buchenwald, Wucherblumen-Eschen-Hainbuchenwald sowie Weißseggen-Winterlindenwald [@pnv].
-Der Schönberg gehört zur Vorbergzone des Schwarzwald und hat auf der Probefläche als Grundgestein Hauptrogenstein. Der Hauptrogenstein, ein Gestein des Mitteljura (Dogger), ist ein oolithischer Kalkstein. Laut @Koerner (S. 57) handelt es sich auf diesem Gestein um Rendzinen mit einem hohen pH-Wert, der meist über dem Neutralpunkt liegt.
+An 60 Probepunkten wurde der pH-Wert des Oberbodens gemessen und die Vegetation aufgenommen. Eine Fläche von 40 mal 50 Metern wurde dazu ausgewählt, durch die eine Scharfe Grenze eines Fichten zu Laubbaumbestandes verläuft. Für die Auswahl wurden die Bestandeskarten im Raum Freiburg verwendet. Damit der pH-Wert auf der Fläche nicht von unterschiedlichem Grundgestein geprägt ist wurde, zusätzlich die geologische Karte mit einbezogen.
+Der Ausgewählte Bestand ist ein ca. 30 jähriger Fichtenbestand am Schönberg auf ca. 520 m über NN, der an einen etwa gleichalten Buchen-Ahorn-Mischwald angrenzt (siehe Abb. \ref{karte1}). Bei dem Waldbestand handelt es sich laut dem Revierförster Herrn Bucher, wahrscheinlich um eine Erstaufforstung. Vereinzelte Baumscheiben lassen auf die ehemalige Nutzung als Waldweide schließen, zudem lässt sich Terrassierung im Gelände erahnen weshalb auch eine ehemalige landwirtschaftliche Nutzung nicht auszuschließen ist. Die potentielle natürliche Vegetation der Fläche ist ein Orchideen-Buchenwald [@pnv].
+Der Schönberg gehört zur Vorbergzone des Schwarzwaldes und hat auf der Probefläche als Grundgestein den Hauptrogenstein. Der Hauptrogenstein, ein Gestein des Mitteljura (Dogger), ist ein oolithischer Kalkstein. Laut @Koerner (S. 57) handelt es sich auf diesem Gestein um Rendzinen mit einem hohen pH-Wert, der meist über dem Neutralpunkt liegt.
 
-Für die Probepunkte wird die 50 x 40 m große Fläche in Quadrate von 10 x 10 m eingeteilt, worein jeweils drei zufällige Probepunkte gelegt werden. Um die Position der Punkte zu wählen werden mit der Software R [@R] 60 zufällige Winkel und Entfernungen gezogen. So werden der Reihe nach vom Mittelpunkt jedes Quadrates aus, jeweils drei Positionen für die Probenahme bestimmt. Die Probepunkte sind somit zufällig auf der Fläche verteilt, und ihre Entfernung zueinander deckt ein breites Spektrum an Distanzen ab ("nested sampling"). Dies ist Grundbedingung für die (geo)statistische Ausertung, da die räumliche Skala der Variation des pH-Wertes (noch) unbekannt ist [@geostat].  
+Für die Probepunkte wurde die 50 x 40 m große Fläche in Quadrate von 10 x 10 m eingeteilt, worein jeweils drei zufällige Probepunkte gelegt werden. Um die Position der Punkte zu wählen, wurden mit der Software R [@R] 60 zufällige Winkel und Entfernungen gezogen. So wurden der Reihe nach vom Mittelpunkt jedes Quadrates aus, jeweils drei Positionen für die Probenahme bestimmt. Die Probepunkte sind somit zufällig auf der Fläche verteilt, und ihre Entfernung zueinander deckt ein breites Spektrum an Distanzen ab. Dies ist Grundbedingung für die (geo)statistische Ausertung, da die räumliche Skala der Variation des pH-Wertes (noch) unbekannt ist [@geostat].  
 
 ```{r punkte}
 ## Veränderung des BodenpH und der Vegetation im Übergang von Nadel zu Laubwald
@@ -78,21 +78,22 @@ tab <- tab %>%
   filter(x > 1 & x < 7)
 ```
 
-Die Fläche wird im Feld aufgesucht und die genaue Position wird dort festgelegt, wo der Anteil der Fichten im über die Bestandeskarte ausgewählten Fichtenbestand am größten ist und seine Grenze zum Laubwald am markantesten ist. Mittels Kompass, Maßband und Peilstab wird die Fläche vermessen und die Ecken markiert. Die Ausrichtung der Fläche verläuft hangparallel, was einer relativ genauen Nord-Süd-Ausrichtung (3°-183°) entspricht. Auf der nördlichen Hälfte dominiert *Picea abies*, auf der südlichen Hälfte steht ausschließlich Laubwald mit *Fagus sylvatica*, *Acer pseudoplatanus*, *Tilia platyphyllos* und *Fraxinus excelsior*.
+Im Feld wurde die Fläche mittels Kompass, Maßband und Peilstab vermessen und die Ecken markiert. Die Ausrichtung der Fläche verläuft hangparallel, was einer relativ genauen Nord-Süd-Ausrichtung (3°-183°) entspricht. Auf der nördlichen Hälfte dominiert *Picea abies*, auf der südlichen Hälfte steht ausschließlich Laubwald mit *Fagus sylvatica*, *Acer pseudoplatanus*, *Tilia platyphyllos* und *Fraxinus excelsior*.
 
 ![Die Probefläche und ihre Position im Wald. Die Fichten stehen in der nördlichen Hälfte der Probefläche, im südlichen Teil ist reiner Laubwald. Der Hang neigt sich leicht nach Osten hin abwärts. \label{karte1} ](Karte1.png)
 
-Ebenso werden mithilfe des Kompass, peilend, die genauen Probepositionen ausegwählt. 
-An jedem Probepunkt wird eine Bodenprobe in ca. 5 cm Tiefe genommen und nach der Bodenkundlichen Kartieranleitung [@kartieranleitung] präpariert. Zusätzlich wird an jedem Punkt die Humusform erfasst, der Bedeckungsgrad der überschirmenden Baumarten, je Art, im Umkreis mit $2 m$ radius. Auch die Bodenvegetation wird im Umkreis von 2m erfasst (Arten und Deckungsgrad). 
-Der pH-Wert der Bodenproben wird sobald ca. 10 Proben bereit sind (Substrat hat sich abgesetzt) mit der pH-Sonde des Typ GMH 5520 des Herstellers Greisinger, hergestellt in Deutschland, gemessen. Die Genauigkeit der Gerätes beträgt laut Hersteller $+-0.005 pH$. Zu beginn der ersten Messung jedes Tages wird das Gerät wie in der Betriebsanleitung beschrieben kalibriert.
+Ebenso wurden mithilfe des Kompass, peilend die genauen Probepositionen ausegwählt. 
+An jedem Probepunkt wurde eine Bodenprobe in ca. 5 cm Tiefe genommen und nach der Bodenkundlichen Kartieranleitung [@kartieranleitung] präpariert. Zusätzlich wurde an jedem Punkt die Humusform und der Bedeckungsgrad der überschirmenden Baumarten, je Art, im Umkreis mit $2 m$ radius bestimmt. Auch die Bodenvegetation wurde im Umkreis von 2m erfasst (Arten und Deckungsgrad). 
+Der pH-Wert der Bodenproben wurde sobald ca. 10 Proben bereit waren (Substrat hat sich abgesetzt) mit der pH-Sonde des Typ GMH 5520 des Herstellers Greisinger, hergestellt in Deutschland, gemessen. Die Genauigkeit der Gerätes beträgt laut Hersteller $+-0.005 pH$. Zu Beginn der ersten Messung jedes Tages, wurde das Gerät wie in der Betriebsanleitung beschrieben kalibriert.
 
-Die Auswertung der Daten erfolgt in R [@R], dabei werden die Pakete "MASS" [@mass - Varianzanalyse], "dplyr" [@dplyr - Datenformatierung], "gstat" [@gstat - geostatistik] und "sp" [@sp - geostatistik]  angewendet. Der R-Code befindet sich im Anhang der Arbeit. 
+Die Auswertung der Daten erfolgte mit der Software R [@R], dabei wurden die Pakete "MASS" [@mass - Varianzanalyse], "dplyr" [@dplyr - Datenformatierung], "gstat" [@gstat - geostatistik] und "sp" [@sp - geostatistik]  angewendet. Der R-Code befindet sich im Anhang der Arbeit. 
 
-Die Fläche wird zunächst in die beiden Klassen "Nadelbaum" und "Laubbaum" eingeteilt. Alle Probepunkte die von Fichten oder Lärchen überschirmt sind werden in die Klasse "Nadelbaum" eingeteilt, Flächen auf denen $0 \%$ Nadelbaum vorhanden ist werden in die Klasse "Laubbaum" eingeteilt. Um die beiden Klassen zu vergleichen wird eine Varianzanalyse nach @Dormann durchgeführt. Da der Test über die Varianzenhomogenität signifikant unterschiedliche Varianzen für die pH-Werte der beiden Klassen liefert, und damit eine der Vorrausetzungen für eine ANOVA verletzt sind, wird der Kruskal-Wallis-Test (p<0,01) durchgeführt.
+Die Fläche wurde zunächst in die beiden Klassen "Nadelwald" und "Laubwald" eingeteilt. In die Klasse "Nadelwald" fällt auch Nadel-Laub-Mischwald, während die Klasse "Laubwald" ausschließlich Laubbaumarten enthält. Um die beiden Klassen zu vergleichen wurde eine Varianzanalyse durchgeführt [@Dormann]. Da der Test der Varianzenhomogenität signifikant unterschiedliche Varianzen für die pH-Werte der beiden Klassen liefert, und damit eine der Vorrausetzungen für eine ANOVA verletzt ist,
+wurde der Kruskal-Wallis-Test (mit dem Signifikanzniveau p < 0,01) durchgeführt.
 
-Eine räumliche betrachtung der pH-Werte erfolgt mittels einem Variogramm, einer geostatistischen Methode zur Analyse der Varianz. Um den pH-Wert über die Fläche zu interpolieren ("kriging") wird ein Modell an das Variogram gefittet. Die Interpolation kann dann graphisch gemeinsam mit den Baumartenanteilen der Punkte dargestellt werden um den pH-Gradienten im Übergang von Fichten- zu Laubwald aufzuzeigen.
+Eine räumliche Betrachtung der pH-Werte erfolgte mittels eines Variogrammes, einer geostatistischen Methode zur Analyse der Varianz. Um den pH-Wert über die Fläche zu interpolieren ("kriging"), wurde ein Modell an das Variogram gefittet. Die Interpolation konnte dann graphisch gemeinsam mit den Baumartenanteilen der Punkte dargestellt werden um den pH-Gradienten im Übergang von Fichten- zu Laubwald aufzuzeigen.
 
-Mittels dem Fisher-Test auf Assoziation wird der Zusammenhang von Baumart und Humusform untersucht. Des weiteren werden zu allen aufgenommenen Pflanzenarten die Zeigerwerte "Reaktionszahl" und "Lichtzahl" nach Ellenberg herausgesucht. Für jeden Punkt wird dann der Mittelwert der Reaktions- sowie Lichtzahl aller dort vorkommenden Arten (unabhängig von der Häufigkeit) berechnet. Um festzustellen ob ein Zusammenhang der Vegetation mit dem pH-Wert des Bodens besteht wird geprüft ob Zeigerwerte und pH-Werte korrelieren.
+Mittels dem Fisher-Test auf Assoziation wurde der Zusammenhang von Baumart und Humusform untersucht. Des weiteren wurden zu allen aufgenommenen Pflanzenarten die Zeigerwerte "Reaktionszahl" und "Lichtzahl" nach Ellenberg [@Rothmaler] herausgesucht. Für jeden Punkt wurde dann der Mittelwert der Reaktions- sowie Lichtzahl aller dort vorkommenden Arten (unabhängig von ihrer Häufigkeit) berechnet. Um festzustellen ob ein Zusammenhang der Vegetation mit dem pH-Wert des Bodens besteht, wurde geprüft ob Zeigerwerte mit den pH-Werten korrelieren.
 
 # Ergebnisse
 
@@ -151,11 +152,11 @@ data1$Baumart <- as.factor(data1$Baumart)
 pHkruskal <- kruskal.test(pH ~ Baumart, data=data1)
 ```
 
-Ein Kolmogorov-Smirnov-test und die kumulative Dichteverteilung der pH-Werte (Abbildung \ref{aov} links) bestätigen, dass die Daten normalverteilt sind. Der Kruskal-Wallis-Test zeigt mit einem p-Wert von 6,391e-06 einen signifikanten Unterschied des pH-Wertes zwischen den beiden Baumartenklassen auf. Der pH-Wert des Oberboden im von Fichten geprägten Standort beträgt im Durchschnitt nur 6,64 ± 0,49 pH, im Buchen-Bergahorn-Mischwald ist er mit 7,35 ± 0,54 pH deutlich höher (Siehe Abb. \ref{aov} rechts). Somit liegen die pH-Werte im Nadelwald im mäßig sauren bis schwach alkalischen Bereich, während während im Laubwald schwach saure bis mäßig alkalische pH-Werte gemessen wurden.
+Der Kolmogorov-Smirnov-test und die kumulative Dichteverteilung der pH-Werte (Abbildung \ref{aov} links) bestätigen, dass die Daten normalverteilt sind. Der Kruskal-Wallis-Test zeigt mit einem p-Wert von 6,391e-06 einen signifikanten Unterschied des pH-Wertes zwischen den beiden Baumartenklassen auf. Der pH-Wert des Oberbodens im von Fichten geprägten Standort beträgt im Durchschnitt nur 6,64 ± 0,49 pH (mäßig sauer bis schwach alkalisch), im Buchen-Bergahorn-Mischwald ist er mit 7,35 ± 0,54 pH (sauer bis mäßig alkalisch) deutlich höher (Siehe Abb. \ref{aov} rechts).
 
-Die räumliche Varianz des pH-Wertes ist in Abbildung \ref{variogram} durch ein Variogram dargestellt. In der Abbildung ist auch das gefittete exponentielle Modell dargestellt. Es wird das exponentielle Model verwendet, da es visuell am besten an die Daten passt. Die Darstellung zeigt die Varianz des pH-Wertes in Abhängigkeit der Entfernung zwischen den Punkten. Es zeigt sich, dass die Varianz der pH-Werte für nahegelegene Punkte gering ist und mit größeren Entfernungen zunimmt. Je weiter die Entfernung zunimmt, desto geringer ist die Zunahme der Varianz. Stellt sich im Variogramm in einer bestimmten Entfernung ein Schwellenwert ein ("sill variance"), so bedeutet dies, dass Punkte mit einer solchen Entfernung zueinander unabhängig sind.
+Die Varianz der pH-Wertes in Abhängigkeit der Entfernung zwischen den Punkten zeigt, dass die Varianz für nahegelegene Punkte gering ist und mit größeren Entfernungen exponentiell zunimmt (siehe Abb. \ref{variogram}). Stellt sich im Variogramm in einer bestimmten Entfernung ein Schwellenwert ein ("sill variance"), so bedeutet dies, dass Punkte mit einer solchen Entfernung zueinander unabhängig sind [@geostat].
 
-```{r variogram, fig.cap="Variogram des pH-Wertes (Punkte) und gefittetes exponentielles Modell (Linie). Es zeigt, dass die Varianz der Punkte mit zunehmender Entfernung größer wird. \\label{variogram}"}
+```{r variogram, fig.cap="Variogramm des pH-Wertes (Punkte) und gefittetes exponentielles Modell (Linie). Es zeigt, dass die Varianz der Punkte mit zunehmender Entfernung größer wird. Das exponentielle Model wird verwendet, da es visuell am besten an die Daten passt. \\label{variogram}"}
 geodat <- data1
 coordinates(geodat) <- ~x_coord + y_coord
 
@@ -166,7 +167,8 @@ fit_vgm <- fit.variogram(vgm_pH, vgm(model = "Exp"))
 plot(vgm_pH, fit_vgm, xlab="Distanz in m", ylab="Semivarianz")
 ```
 
-Das gefittete Model wird verwendet um den pH-Wert der gesamten Fläche zu interpolieren. Das Ergebnis ist in Abbildung \ref{interpol} dargestellt. Der pH erreicht dort wo die Fichte steht, als Hauptbestandteil des Nadelholzes, mit unter pH 6 die tiefsten Werte. Die höchsten Werte des pH sind im Laubwaldbestand gemessen worden. Die pH-Werte der beiden Bestände unterscheiden sich, die Grenze zwischen Nadel und Laubwaldbestand ist jedoch nicht als deutliche Linie zu erkennen, sondern hat vielmehr einen diffusen Übergang.  
+Das gefittete Model wird verwendet um den pH-Wert der gesamten Fläche zu interpolieren. Das Ergebnis ist in Abbildung \ref{interpol} dargestellt. Der pH erreicht dort wo die Fichte steht, als Hauptbestandteil des Nadelholzes, mit unter pH 6 die tiefsten Werte. Die höchsten Werte des pH sind im Laubwaldbestand gemessen worden. Die pH-Werte der beiden Bestände unterscheiden sich, die Grenze zwischen Nadel und Laubwaldbestand ist jedoch nicht als deutliche Linie zu erkennen, sondern hat vielmehr einen diffusen Übergang. 
+
 ```{r include=FALSE}
 grid <- makegrid(geodat, cellsize = 0.5)
 #grid <- SpatialPoints(grid)
@@ -190,20 +192,23 @@ pH_kriged %>% as.data.frame %>%
 
 Die Humusform der Probefläche unterscheidet sich laut Fisher-Test signifikant zwischen Nadel- und Laubwald. Im Laubwald kommt überwiegend L-Mull vor, im Nadelwald überwiegend F-Mull.
 
-Es wurden insgesamt 37 Arten in der Bodenvegetation aufgenommen. Es sind krautige Pflanzen und Verjüngung, die kleiner ist als 20 cm. Die Deckungsgrad der Bodenvegetation beträgt im Mittel nur $5\%$, wobei die Bedeckung im Nadelbestand geringer ist als im Laubbestand.
-Für die Reaktionszahl (Zeigerwert nach Ellenberg aus @Rothmaler) der Vegetation der Krautschicht wird keine Korrelation mit dem pH-Wert festgestellt. Die Lichtzahl korreliert ebenfalls nicht mit dem pH-Wert. Von den 37 erfassten Arten kommen einige wenige wie *Viola reichenbachiana* und *Hedera helix* flächig vor, viele weitere Arten nur vereinzelt. Beispielsweise kam *Cephalanthera rubra*  fünf mal vor, viermal davon im Nadelwald.  
+In der Bodenvegetation wurden insgesamt 37 unterschiedliche Pflanzenarten gefunden und aufgenommen (Artenliste im Anhang). Die Verjüngung ist nicht höher als 20 cm, wahrscheinlich herscht hoher Verbissdruck. Die Verjüngung macht einen Großteil des Deckungsgrades der Bodenvegetation aus. Dieser beträgt im Mittel nur $5\%$, wobei die Bedeckung im Nadelbestand geringer ist als im Laubbestand.
+Die Korrelation des pH-Wertes mit der Reaktionszahl der krautigen Vegetation ist nicht signifikant. Die Lichtzahl korreliert ebenfalls nicht mit dem pH-Wert. Von den 37 erfassten Arten kommen einige wenige wie *Viola reichenbachiana* und *Hedera helix* flächig vor, viele weitere Arten nur vereinzelt. Beispielsweise kam *Cephalanthera rubra*  fünf mal vor, viermal davon im Nadelwald.  
 
 # Diskussion
-Die geostatistische Analyse mittels des einfachen Variograms zeigt ein deutliches Ergebnis. Ein Ergebnis mit einer noch signifikanteren Aussage würde man wahrscheinlich durch eine Analyse auf einen räumlich gerichteten Zusammenhang (Anisotropie) erzielen. Denn Aufgrund des Versuchsdesigns sollte die Verteilung des pH-Wert auf der Fläche anisotrop sein [@geostat].
-Auch die Interpolation ("kriging") ist für diese Arbeit eine geignete Analyse- und Darstellungsmethode. Alternativ ist auch eine Vorhersage des pH-Wertes auf der Fläche durch ein generalisiertes additives model möglich (GAM). Diese Methode hat sich in verschiedenen Studien für Daten mit erhöhtem zufällgen Fehler zu realitätsnäheren Ergebnisse geführt [@gam1, @gam2].
+Die geostatistische Analyse mittels des einfachen Variogramms zeigt ein deutliches Ergebnis. Eine eindeutigere Aussage würde man wahrscheinlich mit einem Test auf einen räumlich gerichteten Zusammenhang (Anisotropie) erzielen. Denn Aufgrund des Versuchsdesigns, sollte die Verteilung des pH-Wert auf der Fläche anisotrop sein [@geostat].
+Auch die Interpolation ("kriging") ist für diese Arbeit eine geignete Analyse- und Darstellungsmethode. Alternativ ist auch eine Vorhersage des pH-Wertes auf der Fläche durch ein generalisiertes additives model möglich (GAM). Diese Methode hat in verschiedenen Studien für Daten mit erhöhtem zufällgen Fehler zu realitätsnäheren Ergebnisse geführt [@gam1, @gam2].
 
-Laut @Koerner (S. 57) handelt es sich bei den Böden auf Hauptrogenstein am Schönberg um humusreiche flachgründige Böden (Rendzinen) mit einem hohen pH-Wert, der meist über dem Neutralpunkt liegt. Solche pH-Werte konnten wir unter dem Laubwaldbestand feststellen, jedoch nicht unter dem Nadelbestand. Da die Fichte Standortsfremd ist  und nicht der potentiell natürlichen Vegetation (PNV) des Schönbergs entspricht ist anzunehmen, dass der erst ca. 30 Jahre alte Fichtenbestand den pH-Wert des Oberbodens dem mit Mittleren pH-Wert von $6,6 \ pH$ bereits von seinem natürlichen Zustand abgesengt hat. Dem Zugrunde liegt jedoch die Annahme, das die Fläche vor der Bepflanzung mit Fichte und Buche einheitlich als Waldweide mit Baumarten der PNV genutzt wurde und das diese Nutzung keinen starken Einfluss auf den pH-Wert des Boden-pH hatte.
+Laut @Koerner (S. 57) handelt es sich bei den Böden auf Hauptrogenstein am Schönberg um humusreiche flachgründige Böden (Rendzinen) mit einem hohen pH-Wert, der meist über dem Neutralpunkt liegt. Solche pH-Werte konnten wir unter dem Laubwaldbestand feststellen, jedoch nicht unter dem Nadelbestand. Da die Fichte Standortsfremd ist  und nicht der potentiell natürlichen Vegetation (PNV) des Schönbergs entspricht, ist anzunehmen, dass der erst ca. 30 Jahre alte Fichtenbestand den pH-Wert des Oberbodens dem mit Mittleren pH-Wert von $6,6 \ pH$ bereits von seinem natürlichen Zustand abgesengt hat. Dem Zugrunde liegt jedoch die Annahme, das die Fläche vor der Bepflanzung mit Fichte und Buche einheitlich als Waldweide mit Baumarten der PNV genutzt wurde und das diese Nutzung keinen starken Einfluss auf den pH-Wert des Boden-pH hatte.
 
 Die Absenkung des pH-Wertes im Oberboden auf der Fichten-dominierten Fläche kann durch den von der Baumart bedingten erhöhten Säureeintrag erklärt werden. Nadelbäume haben aufgrund ihrer ganzjährigen Benadelung und großen Blattoberfläche eine hohe Interzeption und filtern so organische Säuren (vor allem anthropogenen Ursprungs) aus der Atmosphäre [@Scheffer].
 @Matzner stellten unter Fichte sogar etwa doppelt so hohe Depositionsraten von Protonen fest wie unter Buche. Auch die schwer zersetzbare Streu der Fichte verstärkt den Säureeintrag in den Boden und führt zur Bildung der Humusform F-Mull.
 
 Während die Fichtenstreu sich bereits auf den pH-Wert des Bodens ausgewirkt hat, so zeigt sich dies noch nicht in den Zeigerwerten der Bodenvegetation. Dies liegt daran, dass Zeigerwerte nicht nur den physiologischen Anspruch der Pflanze darstellen, sondern eine relative Standortskonstanz. Der Standort der Pflanze wird von vielen Faktoren beeinflusst, unter anderem Konkurrenz und Kooperation [@Wilmanns]. Die kleinräumige Heterogenität der beschattenden Baumarten (Nadelbäume = ganzjährig weniger Licht), fehlende Konkurrenz und der starke Verbiss im Bestand wirkt sich wahrscheinlich auch auf die vorkommenden Arten aus. Ein weiterer Einflussfaktor auf die Vegetation stellt wahrscheinlich die ehemalige Nutzung als Waldweide dar. Beispielsweise haben wir an vielen Orten *Ilex aquifolium* in der Verjüngung vorgefunden, was laut @Koerner (S. 87) eine Erinnerung an die Zeit der Waldweide ist.
 Um den Unterschied der Vegetation auf Standorten mit einem pH-Wert Unterschied von nur 2 pH festzustellen, so müssten größere Flächen, die räumlich voneinander getrennt sind untersucht werden. Mit größeren Stichproben wäre dann zu erwarten, dass sich ein Unterschied in den vorkommenden Pflanzengesellschaften zeigt.
+
+## Schlusfolgerung
+Wir konnten in dieser Arbeit zeigen, dass mit einfachen Methoden eine Bodenverschlechterung durch den Anbau von Fichte auf Kalkböden nachweisbar ist.
 
 # Literatur
 <div id="refs"></div>
